Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -362,7 +362,8 @@
     "             \"Thriller\",\"War\" ,\"Western\"\n",
     "            ]\n",
     "movies = pd.read_csv('ml-100k/u.item', delimiter=\"|\", encoding='latin1', names=col_names)\n",
-    "movies.head()"
+    "movies.head()\n",
+    "movie"
    ]
   },
   {
