--- a/index.ipynb
+++ b/index.ipynb
@@ -144,214 +144,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>movie_id</th>\n",
-       "      <th>movie_title</th>\n",
-       "      <th>release_date</th>\n",
-       "      <th>video_release_date</th>\n",
-       "      <th>IMDb_URL</th>\n",
-       "      <th>unknown</th>\n",
-       "      <th>Action</th>\n",
-       "      <th>Adventure</th>\n",
-       "      <th>Animation</th>\n",
-       "      <th>Childrens</th>\n",
-       "      <th>...</th>\n",
-       "      <th>Fantasy</th>\n",
-       "      <th>Film-Noir</th>\n",
-       "      <th>Horror</th>\n",
-       "      <th>Musical</th>\n",
-       "      <th>Mystery</th>\n",
-       "      <th>Romance</th>\n",
-       "      <th>Sci-Fi</th>\n",
-       "      <th>Thriller</th>\n",
-       "      <th>War</th>\n",
-       "      <th>Western</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>1</td>\n",
-       "      <td>Toy Story (1995)</td>\n",
-       "      <td>01-Jan-1995</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>http://us.imdb.com/M/title-exact?Toy%20Story%2...</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>1</td>\n",
-       "      <td>1</td>\n",
-       "      <td>...</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>2</td>\n",
-       "      <td>GoldenEye (1995)</td>\n",
-       "      <td>01-Jan-1995</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>http://us.imdb.com/M/title-exact?GoldenEye%20(...</td>\n",
-       "      <td>0</td>\n",
-       "      <td>1</td>\n",
-       "      <td>1</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>...</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>1</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>3</td>\n",
-       "      <td>Four Rooms (1995)</td>\n",
-       "      <td>01-Jan-1995</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>http://us.imdb.com/M/title-exact?Four%20Rooms%...</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>...</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>1</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>4</td>\n",
-       "      <td>Get Shorty (1995)</td>\n",
-       "      <td>01-Jan-1995</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>http://us.imdb.com/M/title-exact?Get%20Shorty%...</td>\n",
-       "      <td>0</td>\n",
-       "      <td>1</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>...</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>5</td>\n",
-       "      <td>Copycat (1995)</td>\n",
-       "      <td>01-Jan-1995</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>http://us.imdb.com/M/title-exact?Copycat%20(1995)</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>...</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>1</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "<p>5 rows × 24 columns</p>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "   movie_id        movie_title  release_date   video_release_date  \\\n",
-       "0         1   Toy Story (1995)   01-Jan-1995                  NaN   \n",
-       "1         2   GoldenEye (1995)   01-Jan-1995                  NaN   \n",
-       "2         3  Four Rooms (1995)   01-Jan-1995                  NaN   \n",
-       "3         4  Get Shorty (1995)   01-Jan-1995                  NaN   \n",
-       "4         5     Copycat (1995)   01-Jan-1995                  NaN   \n",
-       "\n",
-       "                                            IMDb_URL  unknown   Action  \\\n",
-       "0  http://us.imdb.com/M/title-exact?Toy%20Story%2...        0        0   \n",
-       "1  http://us.imdb.com/M/title-exact?GoldenEye%20(...        0        1   \n",
-       "2  http://us.imdb.com/M/title-exact?Four%20Rooms%...        0        0   \n",
-       "3  http://us.imdb.com/M/title-exact?Get%20Shorty%...        0        1   \n",
-       "4  http://us.imdb.com/M/title-exact?Copycat%20(1995)        0        0   \n",
-       "\n",
-       "   Adventure  Animation  Childrens   ...     Fantasy  Film-Noir  Horror  \\\n",
-       "0          0          1          1   ...           0          0       0   \n",
-       "1          1          0          0   ...           0          0       0   \n",
-       "2          0          0          0   ...           0          0       0   \n",
-       "3          0          0          0   ...           0          0       0   \n",
-       "4          0          0          0   ...           0          0       0   \n",
-       "\n",
-       "   Musical  Mystery  Romance  Sci-Fi  Thriller  War  Western  \n",
-       "0        0        0        0       0         0    0        0  \n",
-       "1        0        0        0       0         1    0        0  \n",
-       "2        0        0        0       0         1    0        0  \n",
-       "3        0        0        0       0         0    0        0  \n",
-       "4        0        0        0       0         1    0        0  \n",
-       "\n",
-       "[5 rows x 24 columns]"
-      ]
-     },
-     "execution_count": 3,
-     "metadata": {},
-     "output_type": "execute_result"
+     "ename": "NameError",
+     "evalue": "name 'pd' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0mTraceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-1-c6ab96b6f467>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      5\u001b[0m              \u001b[0;34m\"Thriller\"\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\"War\"\u001b[0m \u001b[0;34m,\u001b[0m\u001b[0;34m\"Western\"\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      6\u001b[0m             ]\n\u001b[0;32m----> 7\u001b[0;31m \u001b[0mmovies\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mpd\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mread_csv\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m'ml-100k/u.item'\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mdelimiter\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;34m\"|\"\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mencoding\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;34m'latin1'\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mnames\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mcol_names\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      8\u001b[0m \u001b[0mmovies\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mhead\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      9\u001b[0m \u001b[0mmovies\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0minfo\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mNameError\u001b[0m: name 'pd' is not defined"
+     ]
     }
    ],
    "source": [
@@ -363,7 +168,7 @@
     "            ]\n",
     "movies = pd.read_csv('ml-100k/u.item', delimiter=\"|\", encoding='latin1', names=col_names)\n",
     "movies.head()\n",
-    "movie"
+    "movies.info()"
    ]
   },
   {
